[package]
name = "rustasshn"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tmux-ssh-manager"
path = "src/main.rs"

[[bin]]
name = "rustasshn"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "6.0"
glob = "0.3"
nix = { version = "0.29", default-features = false, features = ["fs", "poll", "term"] }
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
which = "7.0"
rpassword = "7.4"
